added insertion scripting, added kv header

--- a/source/vis.kv
+++ b/source/vis.kv
@@ -1,3 +1,4 @@
+#:kivy 2.1.0
 <Node@Label>:
     color_wrapper: 0, 0, 0, 0
     color_dict: {'default': [0, 0, 1, 0.8], 'focus': [1, 1, 1, 1], 'upstream_sel': [0.5, 1, 0, 1]}
